--- a/static/style.css
+++ b/static/style.css
@@ -40,7 +40,7 @@ h2 {
 .my-font, .my-font * {
     font-family: 'Roboto', sans-serif;
     color: var(--grey200);
-  }
+}
 
 
 body {
@@ -75,16 +75,6 @@ p {
     line-height: 24px;
 }
 
-.chart-font {
-    font-family: 'Roboto', sans-serif;
-    font-size: 12px;
-    color: var(--grey200);
-  }
-
-.chart-colours{
-    background-color: var(--white);
-
-}
 
 .rotate-icon {
   transform: rotate(180deg);
@@ -98,13 +88,13 @@ p {
 
   }
 
-  .side-menu.collapsed .expanded-logo {
+.side-menu.collapsed .expanded-logo {
     display: none;
     margin: 8px;
     padding: 8px;
   }
 
-  .side-menu.collapsed .collapsed-logo {
+.side-menu.collapsed .collapsed-logo {
     display: block;
   }
 
@@ -115,6 +105,7 @@ p {
     background-color: var(--white);
     position: fixed;
     z-index: 1;
+    transition: width 0.3s ease-in-out;
 }
 
 .side-menu ul {
@@ -132,6 +123,8 @@ p {
     padding: 16px 0;
     color: var(--grey200);
     cursor: pointer;
+    transition: width 0.3s ease-in-out;
+
 }
 
 .side-menu li:hover {
@@ -158,6 +151,7 @@ p {
     justify-content: center;
     text-decoration: none;
     background-color: var(--grey300);
+
 }
 
 .side-menu a {
@@ -165,27 +159,40 @@ p {
     align-items: center;
     text-decoration: none;
     color: var(--grey200);
-  }
+}
+
+.button-container {
+    display: flex;
+    justify-content: flex-end;
+}
 
 .button {
-    margin: 16 16 0 16px;
-    padding:16px;
+    margin: 16px;
+    padding: 8px 16px;
     background-color: var(--robin-egg-blue);
-    border: 1px solid var(--grey200);
     border-radius: 16px;
     color: var(--white);
-    margin-left: auto;
+    margin-right: auto;
 }
 
-.button-secondary{
-    margin-right: 16px;
-    padding:16px;
+.button-primary {
+    background-color: var(--robin-egg-blue);
+    border: 1px solid var(--grey200);
+    color: var(--white);
+}
+
+.button-secondary {
     background-color: var(--white);
     border: 1px solid var(--grey200);
-    border-radius: 16px;
     color: var(--grey200);
-    margin-left: auto;
 }
+
+.button-danger {
+    background-color: var(--venetian-red);
+    border: 1px solid var(--grey300);
+    color: var(--white);
+}
+
 
 .bottom-items {
     position: absolute;
@@ -201,9 +208,22 @@ p {
     display: none;
 }
 
+/* Chart */
+.chart-font {
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    color: var(--grey200);
+  }
+
+.chart-colours{
+    background-color: var(--white);
+
+}
 #chart {
     width: 100%;
-    height: 70vh;
+    min-height: 400px; /* Set a minimum height */
+    max-height: 600px; /* Set a maximum height */
+    height: 100%;
 }
 
 .chart {
@@ -283,8 +303,8 @@ p {
     margin-left: calc(100% - (100% - var(--side-menu-width)));
     min-height: 100vh;
     box-sizing: border-box;
+    transition: margin-left 0.5s, margin-top 0.5s ease-in-out;
 }
-
 
 .content-wrapper.menu-collapsed {
     margin-left: var(--side-menu-collapsed-width);
@@ -338,7 +358,6 @@ p {
   }
 
 
-
 /* Modal */
 
 .modal {
@@ -352,25 +371,23 @@ p {
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.4);
     backdrop-filter: blur(5px);
-
 }
 
 .modal-content {
     background-color: var(--white);
     border: 1px solid var(--grey200);
     border-radius: 16px;
-    margin: 15% auto;
+    margin: 16px auto;
     padding: 24px;
     width: 80%;
     position: relative;
     bottom: 0;
     transform: translateY(200%);
-    transition: transform 0.5s ease-in-out;
-
+    transition: transform 0.3s ease-in-out;
 }
 
 .modal-show .modal-content {
-    transform: translateY(0%);
+    transform: translateY(20%);
 }
 
 
@@ -397,30 +414,87 @@ p {
   color: var(--grey100);
 }
 
+/* Bottom App Bar */
+
+.bottom-app-bar {
+    z-index: 1000;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: var(--white);
+    box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.bottom-app-bar nav {
+    height: 56px;
+    display: flex;
+    justify-content: center;
+}
+
+.app-bar-link {
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    width: 100vw;
+}
+
+.app-bar-link > li {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 12px;
+    justify-content: center;
+}
+
+.app-bar-link a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: var(--grey200);
+    text-decoration: none;
+}
+
+.app-bar-link a i.material-icons {
+    font-size: 24px;
+}
+
+.app-bar-link a span {
+    margin-top: 4px;
+}
 
 
 /* Hamburger Menu */
 
 .hamburger-menu {
     z-index: 1000;
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 16px;
     background-color: var(--white);
+    transition: top 0.3s ease-in-out;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
 .hamburger-menu img {
-    margin-left: 16px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
-#hamburgerMenu button {
+.menu-toggle {
     margin-right: 16px;
     background-color: var(--white);
     border: none;
     color: var(--grey200);
-    margin-left: auto;
+    cursor: pointer;
 }
 
 #hamburgerMenuItems {
@@ -429,9 +503,21 @@ p {
     left: 0;
     background-color: var(--white);
     padding: 16px;
+    margin-bottom: 16px;
     width: 100%;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease-in-out;
+    display: none;
+    flex-direction: column;
+    list-style: none;
+
+}
+
+#hamburgerMenuItems.show {
+    display: flex;
+}
+
+#hamburgerMenuItems > *:not(:last-child) {
+    margin-bottom: 16px;
 }
 
 #hamburgerMenuItems a {
@@ -439,39 +525,31 @@ p {
     align-items: center;
     color: var(--grey200);
     text-decoration: none;
-}
-
-#hamburgerMenuItems.show {
-    display: block;
-    transform: translateY(0);
-    visibility: visible;
+    font-size: 16px;
 }
 
 #hamburgerMenuItems a i.material-icons {
     margin-right: 16px;
 }
 
-/* Hamburger Menu Items Spacing */
-
-#hamburgerMenuItems > *:not(:last-child) {
-    margin-bottom: 16px;
+@media screen and (min-width: 768px) {
+    .bottom-app-bar {
+        display: none;
+    }
 }
-
-.hamburger-menu #hamburgerMenuItems.hide {
-    display: none;
-    transform: translateY(-100%);
-  visibility: hidden;
-  }
 
 @media screen and (max-width: 767px) {
 
+
     .hamburger-menu {
         display: flex;
+        align-items: flex-start;
     }
 
     .card-container {
         flex: 1 1 calc(100% - 16px);
         width: auto;
+
     }
 
     .side-menu {
@@ -479,7 +557,8 @@ p {
     }
 
     .content-wrapper {
-        margin-left: 0;
+        margin: 64px 0px 72px 0px;
+
+
     }
 }
-
