--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
                 <li><a href="/main"><i class="material-icons">home</i><span>Home</span></a></li>
                 <li><a href="/account"><i class="material-icons">account_circle</i><span>My Account</span></a></li>
                 <li><a href="/prices"><i class="material-icons">bar_chart</i><span>Price Data</span></a></li>
-                <li class="collapse-item" onclick="toggleCollapse()"><i class="material-icons rotate-icon">double_arrow</i><span>Collapse</span></li>
+                <li class="collapse-item" id="toggle-collapse-btn" onclick="toggleCollapse()"><i class="material-icons rotate-icon">double_arrow</i><span>Collapse</span></li>
                 </ul>
             <div class="bottom-items">
             <ul>
