--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -10,7 +10,7 @@
             <div id="chart"></div>
             </div>
 
-            <!-- Bottom Cards -->
+            <!-- Top of Cards -->
             <div class="custom-row">
                 <!-- Card 1 -->
                 <div class="card-container col">
